fix(ui): Sidebar scroll not showing last element

--- a/packages/ui-components/src/Containers/Article/index.module.css
+++ b/packages/ui-components/src/Containers/Article/index.module.css
@@ -16,11 +16,11 @@
     2xl:grid-cols-[--spacing(72)_1fr_--spacing(72)];
 
   > *:nth-child(1) {
-    @apply ml:sticky
-      ml:top-0
-      ml:h-svh
-      ml:overflow-y-auto
-      [grid-area:sidebar];
+    @apply [grid-area:sidebar]
+      lg:sticky
+      lg:top-0
+      lg:max-h-[calc(100vh-var(--header-height,0))]
+      lg:overflow-y-auto;
   }
 
   > *:nth-child(2) {
